Fix paragraphs spacing

--- a/style.css
+++ b/style.css
@@ -56,7 +56,7 @@ p {
 }
 
 p:last-child {
-  margin-top: 20px;
+  margin-top: 25px;
   width: 80%;
 }
 
